grammar.js
        script: $ => repeat($._top_level_statement),

        _top_level_statement: $ => choice(
            $.import_declaration,
            $.include_directive,
            $.function_declaration,
            $.class_declaration,
            $.interface_declaration,
            $.enum_declaration,
            $.mixin_declaration,
            $.namespace_declaration,
            $.typedef_declaration,
            $.funcdef_declaration,
            $.variable_declaration_statement,
            $.metadata,
            $.semicolon,
        ),

        // ─── Preprocessor / import ──────────────────────────────────────────────

        enum_declaration: $ => seq(
            optional('shared'),
            optional('external'),
            'enum',
            field('name', $.identifier),
            optional($.metadata),
            '{',
            optional($.enum_body),
            '}',
        ),

        enum_body: $ => seq(
            $.enum_member,
            repeat(seq(',', $.enum_member)),
            optional(','),
        ),

        enum_member: $ => seq(
            optional($.metadata),
            field('name', $.identifier),
            optional(seq('=', field('value', $.expression))),
        ),

        // ─── Interface ──────────────────────────────────────────────────────────

        interface_declaration: $ => seq(
            optional('shared'),
            optional('external'),
            'interface',
            field('name', $.identifier),
            optional(seq(':', field('bases', $.base_list))),
            optional($.metadata),
            '{',
            repeat($._interface_member),
            '}',
        ),

        _interface_member: $ => choice(
            $.interface_method,
            $.variable_declaration_statement,
            $.semicolon,
        ),

        interface_method: $ => prec.right(seq(
            field('return_type', $.type),
            field('name', $.identifier),
            '(',
            field('params', optional($.parameter_list)),
            ')',
            optional($.const_qualifier),
            optional($.metadata),
            optional($.semicolon),
        )),

        // ─── Mixin ──────────────────────────────────────────────────────────────

        class_declaration: $ => seq(
            optional('shared'),
            optional('abstract'),
            optional('final'),
            optional('external'),
            'class',
            field('name', $.identifier),
            optional(seq(':', field('bases', $.base_list))),
            optional($.metadata),
            '{',
            repeat($._class_member),
            '}',
        ),

        _class_member: $ => choice(
            $.function_declaration,
            $.variable_declaration_statement,
            $.access_modifier,
            $.semicolon,
        ),

        function_declaration: $ => seq(
            repeat($._modifier),
            optional(field('return_type', $.type)),
            field('name', choice($.identifier, $.destructor_name)),
            '(',
            field('params', optional($.parameter_list)),
            ')',
            optional($.const_qualifier),
            optional($.override_qualifier),
            optional($.metadata),
            choice($.block, $.semicolon),
        ),

        _modifier: $ => choice(
            'private',
            'protected',
            'public',
            'override',
            'explicit',
        ),


        parameter_list: $ => seq(
            $.parameter,
            repeat(seq(',', $.parameter)),
        ),

        parameter: $ => seq(
            field('type', $.type),
            optional(field('name', $.identifier)),
            optional(seq('=', field('default', $.expression))),
        ),

        // ─── Metadata ───────────────────────────────────────────────────────────

        block: $ => prec(1, seq(
            '{',
            repeat($._statement),
            '}',
        )),

        _statement: $ => choice(
            $.block,
            $.if_statement,
            $.while_statement,
            $.do_while_statement,
            $.for_statement,
            $.foreach_statement,
            $.switch_statement,
            $.return_statement,
            $.break_statement,
            $.continue_statement,
            $.try_statement,
            $.throw_statement,
            $.variable_declaration_statement,
            $.expression_statement,
            $.semicolon,
        ),

        if_statement: $ => prec.right(seq(
            'if',
            '(',
            field('condition', $.expression),
            ')',
            field('consequence', $._statement),
            optional(seq('else', field('alternative', $._statement))),
        )),

        while_statement: $ => seq(
            'while',
            '(',
            field('condition', $.expression),
            ')',
            field('body', $._statement),
        ),

        for_statement: $ => seq(
            'for',
            '(',
            optional(choice($.variable_declaration_statement, $.expression_statement)),
            field('condition', optional($.expression)),
            $.semicolon,
            field('update', optional($.expression_list)),
            ')',
            field('body', $._statement),
        ),

        switch_statement: $ => seq(
            'switch',
            '(',
            field('value', $.expression),
            ')',
            '{',
            repeat($.switch_case),
            '}',
        ),

        switch_case: $ => choice(
            seq('case', field('value', $.expression), ':', repeat($._statement)),
            seq('default', ':', repeat($._statement)),
        ),

        return_statement: $ => prec.right(seq(
            'return',
            optional($.expression),
            optional($.semicolon),
        )),

        break_statement: $ => prec.right(seq('break', optional($.semicolon))),

        variable_declaration_statement: $ => prec.right(seq(
            $.variable_declaration,
            optional($.semicolon),
        )),

        variable_declaration: $ => seq(
            field('type', $.type),
            $.declarator,
            repeat(seq(',', $.declarator)),
        ),

        declarator: $ => seq(
            field('name', $.identifier),
            optional(seq('=', field('value', $.expression))),
        ),

        expression_statement: $ => prec.right(seq(
            $.expression,
            optional($.semicolon),
        )),

        expression_list: $ => seq(
            $.expression,
            repeat(seq(',', $.expression)),
        ),

        // ─── Expressions ────────────────────────────────────────────────────────

        expression: $ => choice(
            $.assignment_expression,
            $.ternary_expression,
            $.binary_expression,
            $.unary_expression,
            $.postfix_expression,
            $.cast_expression,
            $.function_call,
            $.subscript_expression,
            $.member_access,
            $.namespace_access,
            $.handle_of_expression,
            $.lambda_expression,
            $.primary_expression,
        ),

        assignment_expression: $ => prec.right(PREC.ASSIGNMENT, seq(
            field('left', $.expression),
            field('operator', $.assignment_operator),
            field('right', $.expression),
        )),

        assignment_operator: _ => choice(
            '=', '+=', '-=', '*=', '/=', '%=', '**=',
            '&=', '|=', '^=', '<<=', '>>=', '>>>=',
        ),

        binary_expression: $ => choice(
            prec.left(PREC.LOGICAL_OR, seq(field('left', $.expression), field('operator', choice('||', 'or')), field('right', $.expression))),
            prec.left(PREC.LOGICAL_AND, seq(field('left', $.expression), field('operator', choice('&&', 'and')), field('right', $.expression))),
            prec.left(PREC.BITWISE_OR, seq(field('left', $.expression), field('operator', '|'), field('right', $.expression))),
            prec.left(PREC.BITWISE_XOR, seq(field('left', $.expression), field('operator', '^'), field('right', $.expression))),
            prec.left(PREC.BITWISE_AND, seq(field('left', $.expression), field('operator', '&'), field('right', $.expression))),
            prec.left(PREC.EQUALITY, seq(field('left', $.expression), field('operator', choice('==', '!=')), field('right', $.expression))),
            prec.left(PREC.EQUALITY, seq(field('left', $.expression), field('operator', 'is'), field('right', $.expression))),
            prec.left(PREC.EQUALITY, seq(field('left', $.expression), field('operator', seq('!', 'is')), field('right', $.expression))),
            prec.left(PREC.RELATIONAL, seq(field('left', $.expression), field('operator', choice('<', '>', '<=', '>=')), field('right', $.expression))),
            prec.left(PREC.RELATIONAL, seq(field('left', $.expression), field('operator', 'xor'), field('right', $.expression))),
            prec.left(PREC.BITSHIFT, seq(field('left', $.expression), field('operator', choice('<<', '>>', '>>>')), field('right', $.expression))),
            prec.left(PREC.ADDITIVE, seq(field('left', $.expression), field('operator', choice('+', '-')), field('right', $.expression))),
            prec.left(PREC.MULTIPLICATIVE, seq(field('left', $.expression), field('operator', choice('*', '/', '%')), field('right', $.expression))),
            prec.right(PREC.POWER, seq(field('left', $.expression), field('operator', '**'), field('right', $.expression))),
        ),

        postfix_expression: $ => prec.left(PREC.POSTFIX, seq(
            field('operand', $.expression),
            field('operator', choice('++', '--')),
        )),

        argument_list: $ => seq(
            $.expression,
            repeat(seq(',', $.expression)),
        ),

        primary_expression: $ => choice(
            $.integer_literal,
            $.float_literal,
            $.hex_literal,
            $.bits_literal,
            $.string_literal,
            $.bool_literal,
            $.null_literal,
            $.this_expression,
            $.super_expression,
            $.identifier,
            $.parenthesized_expression,
            $.initializer_list,
            $.new_expression,
        ),

        bool_literal: _ => choice('true', 'false'),

        // ─── Types ──────────────────────────────────────────────────────────────

        type: $ => seq(
            optional('const'),
            choice(
                $.primitive_type,
                $.scoped_name,
            ),
            optional(seq('<', $.type, repeat(seq(',', $.type)), '>')),
            optional($.array_type_suffix),
            optional('@'),
            optional('&'),
            optional('?'),
        ),

        primitive_type: _ => choice(
            'void',
            'int', 'int8', 'int16', 'int32', 'int64',
            'uint', 'uint8', 'uint16', 'uint32', 'uint64',
            'float', 'double',
            'bool',
            'string',
            'auto',
        ),

        scoped_name: $ => prec.left(seq(
            optional('::'),
            $.identifier,
            repeat(seq('::', $.identifier)),
        )),

        // ─── Literals ───────────────────────────────────────────────────────────

        integer_literal: _ => token(seq(
            /[0-9]+/,
            optional(/[uU]/),
        )),

        hex_literal: _ => token(seq(
            /0[xX]/,
            /[0-9a-fA-F]+/,
        )),

        float_literal: _ => token(seq(
            choice(
                // 1e5, 1E-3
                seq(/[0-9]+/, /[eE][+-]?[0-9]+/),
                // .3, .3e5
                seq('.', /[0-9]+/, optional(/[eE][+-]?[0-9]+/)),
                // 1.2, 1.2e5
                seq(/[0-9]+/, '.', /[0-9]+/, optional(/[eE][+-]?[0-9]+/)),
                // 4.
                seq(/[0-9]+/, '.'),
            ),
            optional(/[fF]/),
        )),

        string_literal: $ => $._adjacent_strings,


        // ─── Identifier ─────────────────────────────────────────────────────────

        identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,

        // ─── Comments ───────────────────────────────────────────────────────────

        semicolon: _ => ';',
    },
})
