test/corpus/declarations.txt
================================================================================
Empty function
================================================================================

void HelloWorld() {}

--------------------------------------------------------------------------------

(script
  (function_declaration
    return_type: (type (scoped_name (identifier)))
    name: (identifier)
    (block)))

================================================================================
Function with return
================================================================================

int Add(int a, int b) {
  return a + b;
}

--------------------------------------------------------------------------------

(script
  (function_declaration
    return_type: (type (scoped_name (identifier)))
    name: (identifier)
    params: (parameter_list
      (parameter type: (type (scoped_name (identifier))) name: (identifier))
      (parameter type: (type (scoped_name (identifier))) name: (identifier)))
    (block
      (return_statement
        (expression
          (binary_expression
            left: (expression (primary_expression (identifier)))
            right: (expression (primary_expression (identifier)))))
        (semicolon)))))

================================================================================
Class declaration
================================================================================

class Foo {
  int x;
}

--------------------------------------------------------------------------------

(script
  (class_declaration
    name: (identifier)
    (variable_declaration_statement
      (variable_declaration
        type: (type (scoped_name (identifier)))
        (declarator name: (identifier)))
      (semicolon))))

================================================================================
Class with private and protected members
================================================================================

class Foo {
  private int a;
  protected int b;
  private void SomeMethod() {}
  protected void AnotherMethod() {}
}

--------------------------------------------------------------------------------

(script
  (class_declaration
    name: (identifier)
    (variable_declaration_statement
      (variable_declaration
        type: (type (scoped_name (identifier)))
        (declarator name: (identifier)))
      (semicolon))
    (variable_declaration_statement
      (variable_declaration
        type: (type (scoped_name (identifier)))
        (declarator name: (identifier)))
      (semicolon))
    (function_declaration
      return_type: (type (scoped_name (identifier)))
      name: (identifier)
      (block))
    (function_declaration
      return_type: (type (scoped_name (identifier)))
      name: (identifier)
      (block))))

================================================================================
Enum declaration
================================================================================

enum Color {
  Red,
  Green,
  Blue
}

--------------------------------------------------------------------------------

(script
  (enum_declaration
    name: (identifier)
    (enum_body
      (enum_member name: (identifier))
      (enum_member name: (identifier))
      (enum_member name: (identifier)))))

================================================================================
Interface declaration
================================================================================

interface IFoo {
  void Bar();
}

--------------------------------------------------------------------------------

(script
  (interface_declaration
    name: (identifier)
    (interface_method
      return_type: (type (scoped_name (identifier)))
      name: (identifier)
      (semicolon))))

================================================================================
Variable declaration with constructor args
================================================================================

array<unit> g_VK(12);

--------------------------------------------------------------------------------

(script
  (variable_declaration_statement
    (variable_declaration
      type: (type
        (scoped_name (identifier))
        (type (scoped_name (identifier))))
      (declarator
        name: (identifier)
        args: (argument_list
          (expression (primary_expression (integer_literal))))))
    (semicolon)))

================================================================================
Using namespace declaration
================================================================================

using namespace MyNamespace;

--------------------------------------------------------------------------------

(script
  (using_namespace_declaration
    name: (scoped_name (identifier))
    (semicolon)))

================================================================================
Reference qualifiers in class constructor
================================================================================

class A {
  A(string &in a, string &out b, string &inout c, string& d) {}
}

--------------------------------------------------------------------------------

(script
  (class_declaration
    name: (identifier)
    (function_declaration
      name: (identifier)
      params: (parameter_list
        (parameter
          type: (type (scoped_name (identifier)))
          name: (identifier))
        (parameter
          type: (type (scoped_name (identifier)))
          name: (identifier))
        (parameter
          type: (type (scoped_name (identifier)))
          name: (identifier))
        (parameter
          type: (type (scoped_name (identifier)))
          name: (identifier)))
      (block))))

================================================================================
Reference qualifiers in function
================================================================================

void f(string &in a, string &out b, string &inout c) {}

--------------------------------------------------------------------------------

(script
  (function_declaration
    return_type: (type (scoped_name (identifier)))
    name: (identifier)
    params: (parameter_list
      (parameter
        type: (type (scoped_name (identifier)))
        name: (identifier))
      (parameter
        type: (type (scoped_name (identifier)))
        name: (identifier))
      (parameter
        type: (type (scoped_name (identifier)))
        name: (identifier)))
    (block)))

================================================================================
Reference qualifiers in class method
================================================================================

class A {
  void Method(string &in a, string &out b, string &inout c) {}
}

--------------------------------------------------------------------------------

(script
  (class_declaration
    name: (identifier)
    (function_declaration
      return_type: (type (scoped_name (identifier)))
      name: (identifier)
      params: (parameter_list
        (parameter
          type: (type (scoped_name (identifier)))
          name: (identifier))
        (parameter
          type: (type (scoped_name (identifier)))
          name: (identifier))
        (parameter
          type: (type (scoped_name (identifier)))
          name: (identifier)))
      (block))))
